--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -38,7 +38,7 @@ body{
 header{
     display: flex;
     justify-content: space-between;
-    border: 5px solid red;
+    /* border: 5px solid red; */
     grid-area: hd;
     /* width: 98vw; */
     /* background-color: #333;
@@ -73,7 +73,7 @@ h3{
 }
 
 .experienceBlock{
-    border: 5px dotted gold;
+    /* border: 5px dotted gold; */
     margin-top: 14px;
     margin-bottom: 14px;
     padding-bottom: 15px;
@@ -142,7 +142,7 @@ h3{
 }
 
 main{
-    border: 5px solid black;
+    /* border: 5px solid black; */
     grid-area: mn;
     /* min-width: 70vw; */
     padding-top: 10px;
@@ -179,6 +179,7 @@ aside{
     grid-area: sb;
     /* color: whitesmoke;
     background-color: #333; */
+    
     min-height: 900px;
     /* max-height: 900px; */
 /* justify-self: center; */
@@ -219,7 +220,7 @@ aside .salarySB {
 
 footer{
     max-height: 250px;
-    border: 5px solid green;
+    /* border: 5px solid green; */
     grid-area: ft;
     /* background-color: #333; */
 }
