--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -20,8 +20,8 @@ body{
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(1, auto);
     grid-template-areas:    "hd hd hd hd hd hd hd hd"
-                            "mn mn mn mn mn mn sb sb"
-                            "mn mn mn mn mn mn sb sb"
+                            "mn mn mn mn mn mn mn mn"
+                            "mn mn mn mn mn mn mn mn"
                             "ft ft ft ft ft ft ft ft";
     /* height: 100vh;
     width: 100vw; */ 
@@ -30,6 +30,8 @@ body{
     transition: all .3s ease;
     /* background: url(/static/imgs/keyboard.jpg);
     background-size: cover; */
+    /* justify-content: center;
+    align-items: center; */
 
 }
 
@@ -38,15 +40,19 @@ body{
 header{
     display: flex;
     justify-content: space-between;
+    flex-direction: row;
     /* border: 5px solid red; */
     grid-area: hd;
     /* width: 98vw; */
     /* background-color: #333;
     color: whitesmoke; */
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 20px;
 }
-header button{
+header #nightModeBtn{
     border-radius: 50%;
+    margin-top: 5px;
+    margin-left: 15px;
 }
 
 header .nightModeIcon{
@@ -61,10 +67,27 @@ header .dayModeIcon{
     height: 60px;
 }
 
+
+
 header h1{
-    margin-right: 40vw;
     margin-top: 10px;
     text-align: center;
+}
+
+header #hireBtn{
+    border-radius: 15%;
+    margin-right: 15px;
+    margin-top: 5px;
+    background-color: red;
+    width: 200px;
+    font-family: monospace, sans-serif;
+    font-size: 2.5rem;
+}
+
+header #hireBtn:hover{
+    border: 3px solid #333;
+    box-shadow: #333 4px 4px;
+    font-size: 2.8rem;
 }
 
 h3{
@@ -155,6 +178,7 @@ main{
     font-family:  sans-serif;
     /* background-color: #333;
     color: whitesmoke; */
+    margin-left: 20px;
     
 }
 
@@ -172,7 +196,7 @@ main{
 }
 
 aside{
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-evenly;
     border: 5px solid gray;
@@ -185,6 +209,13 @@ aside{
 /* justify-self: center; */
     align-self: self-start;
     margin-top: 30%;
+}
+
+aside #hideMeBtn{
+    /* width: 50%;
+    margin-left: 25%;
+    height: 50px;
+     */
 }
 
 aside img {
@@ -216,6 +247,10 @@ aside .salarySB {
     color: rgba(11, 165, 16, 0.935);
 }
 
+
+.modal{
+    
+}
 
 
 footer{
