Modal window added

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -249,9 +249,51 @@ aside .salarySB {
 
 
 .modal{
-    
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity .4, visibility .4s;
 }
 
+.modal__box{
+    position: relative;
+    max-width: 500px;
+    padding: 45px;
+    z-index: 1;
+    margin: 30px 15px;
+    background-color: whitesmoke;
+    transform: scale(0);
+    transition: transform .8s;
+}
+
+#hideMeBtn{
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    border: none;
+    background-color: transparent;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.modal.open {
+    visibility: visible;
+    opacity: 1;
+}
+
+.modal.open .modal__box{
+    transform: scale(1);
+}
 
 footer{
     max-height: 250px;
