bug fixed with media

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -663,7 +663,28 @@ footer{
         width: fit-content;
     }
 
+
+    .certificates__box{
+        display: flex;
+        position: relative;
+        flex-wrap: wrap;
+        max-width: 500px;
+        padding: 25px;
+        z-index: 1;
+        margin: 15px 7.5px;
+        background-color: whitesmoke;
+        transform: scale(0);
+        text-align: center; 
+        transition: transform .8s;
+    }
     
+    .certificates__box img{
+        max-width: 250px;
+        margin: 5px;
+        border: 2.5px solid gray;
+        
+    }
+
     .modal__box{
         position: relative;
         max-width: 400px;
