--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -93,7 +93,7 @@ header #hireBtn{
     border-radius: 15%;
     margin-right: 15px;
     margin-top: 5px;
-    background-color: red;
+    background-color: rgb(132, 255, 105);
     width: 200px;
     font-family: monospace, sans-serif;
     font-size: 2.5rem;
